Mon Aug  4 23:58:42 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* TODO added EILSEQ issue
	* include/tds.h started redefinition of log levels. 
	
Mon Aug  4 21:57:50 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/index.html doc/htdoc/software.html
	- updated per Frediano's suggestions today on ML
	
Mon Aug  4 21:22:21 EDT 2003    JK Lowden <jklowden@schemamania.org>
	* TODO marked website tasks as done.
	* doc/htdoc/faq.html 
	- linked to which_api and removed stale questions.

Mon Aug 04 17:12:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merge from Steve patch:
	 - merged _SQLAllocDesc and _SQLFreeDesc

Mon Aug 04 14:44:02 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c src/tds/token.c:
	- fix problem when server change charset coding

Mon Aug 04 11:12:42 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c: cleanup and small changes

Sun Aug  3 23:46:25 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/basic_jdbc_question.html doc/htdoc/faq.html
	- moved from doc directory
	* doc/htdoc/contrib.html
	* doc/htdoc/docs.html
	* doc/htdoc/index.html
	* doc/htdoc/news.html
	* doc/htdoc/software.html
	* doc/htdoc/support.html
	* doc/htdoc/vague_jdbc_question.html
	* doc/htdoc/which_api.html
	- Added website pages to doc/htdoc

Sun Aug 03 16:02:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c: add PacketSize DSN entry

Sat Aug 02 19:49:38 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/Makefile.am include/tds.h include/tdsiconv.h:
	- do not install tdsiconv.h

Fri Aug 01 17:50:46 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/connectparams.c src/odbc/convert_sql2string.c:
	* src/odbc/error.c:
	- remove some FIXME from code

Fri Aug 01 15:45:39 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- do not cause invalid data with variant, replace with NULL
