@@ -1,3 +1,6 @@
+Tue Aug  5 01:00:29 EDT 2003	JK Lowden <jklowden@schemamania.org>
+	* doc/Makefile.am removed faq and basic question
+	
 Mon Aug  4 23:58:42 EDT 2003	JK Lowden <jklowden@schemamania.org>
 	* TODO added EILSEQ issue
 	* include/tds.h started redefinition of log levels. 
